--- a/pytantan/platform/pxd.in
+++ b/pytantan/platform/pxd.in
@@ -15,3 +15,16 @@ cdef int maskSequences${SIMD}(
     double minMaskProb,
     const unsigned char* maskTable
 ) except 1 nogil
+
+cdef int getProbabilities${SIMD}(
+    const unsigned char* seqBeg,
+    const unsigned char* seqEnd,
+    int maxRepeatOffset,
+    const double** likelihoodRationMatrix,
+    double repeatProb,
+    double repeatEndProb,
+    double repeatOffsetProbDecay,
+    double firstGapProb,
+    double otherGapProb,
+    float* probabilities
+) except 1 nogil
