--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,24 @@ pytantan = py.typed, *.pyi, *.pxd, *.h
 pytantan.tests = requirements.txt
 pytantan.tests.data = *
 
+[build_matrices]
+matrices = 
+    BLOSUM100
+    BLOSUM90
+    BLOSUM85
+    BLOSUM80
+    BLOSUM75
+    BLOSUM70
+    BLOSUM65
+    BLOSUM62
+    BLOSUM60
+    BLOSUM55
+    BLOSUM50
+    BLOSUM45
+    BLOSUM40
+    BLOSUM35
+    BLOSUM30
+
 [coverage:run]
 plugins = Cython.Coverage
 include = pytantan/*.py, pytantan/lib.pyx
