--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -143,63 +143,63 @@ jobs:
         fail_ci_if_error: true
         token: ${{ secrets.CODECOV_TOKEN }}
 
-  test_windows:
-    name: Test (Windows)
-    runs-on: windows-latest
-    env:
-      OS: Windows
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-        - python-version: 3.6
-          python-release: v3.6
-          python-impl: CPython
-        - python-version: 3.7
-          python-release: v3.7
-          python-impl: CPython
-        - python-version: 3.8
-          python-release: v3.8
-          python-impl: CPython
-        - python-version: 3.9
-          python-release: v3.9
-          python-impl: CPython
-        - python-version: '3.10'
-          python-release: v3.10
-          python-impl: CPython
-        - python-version: '3.11'
-          python-release: v3.11
-          python-impl: CPython
-        - python-version: '3.12'
-          python-release: v3.12
-          python-impl: CPython
-        - python-version: pypy-3.7
-          python-release: v3.7
-          python-impl: PyPy
-        - python-version: pypy-3.8
-          python-release: v3.8
-          python-impl: PyPy
-        - python-version: pypy-3.9
-          python-release: v3.9
-          python-impl: PyPy
-        - python-version: pypy-3.10
-          python-release: v3.10
-          python-impl: PyPy
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-      with:
-        submodules: true
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64
-    - name: Update pip
-      run: python -m pip install -U pip wheel setuptools
-    - name: Install Python requirements
-      run: python -m pip install -r .github/workflows/requirements.txt
-    - name: Build C extension
-      run: python setup.py build_ext --inplace
-    - name: Test without coverage
-      run: python -m unittest discover -vv
+  # test_windows:
+  #   name: Test (Windows)
+  #   runs-on: windows-latest
+  #   env:
+  #     OS: Windows
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       include:
+  #       - python-version: 3.6
+  #         python-release: v3.6
+  #         python-impl: CPython
+  #       - python-version: 3.7
+  #         python-release: v3.7
+  #         python-impl: CPython
+  #       - python-version: 3.8
+  #         python-release: v3.8
+  #         python-impl: CPython
+  #       - python-version: 3.9
+  #         python-release: v3.9
+  #         python-impl: CPython
+  #       - python-version: '3.10'
+  #         python-release: v3.10
+  #         python-impl: CPython
+  #       - python-version: '3.11'
+  #         python-release: v3.11
+  #         python-impl: CPython
+  #       - python-version: '3.12'
+  #         python-release: v3.12
+  #         python-impl: CPython
+  #       - python-version: pypy-3.7
+  #         python-release: v3.7
+  #         python-impl: PyPy
+  #       - python-version: pypy-3.8
+  #         python-release: v3.8
+  #         python-impl: PyPy
+  #       - python-version: pypy-3.9
+  #         python-release: v3.9
+  #         python-impl: PyPy
+  #       - python-version: pypy-3.10
+  #         python-release: v3.10
+  #         python-impl: PyPy
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v2
+  #     with:
+  #       submodules: true
+  #   - name: Setup Python ${{ matrix.python-version }}
+  #     uses: actions/setup-python@v5
+  #     with:
+  #       python-version: ${{ matrix.python-version }}
+  #       architecture: x64
+  #   - name: Update pip
+  #     run: python -m pip install -U pip wheel setuptools
+  #   - name: Install Python requirements
+  #     run: python -m pip install -r .github/workflows/requirements.txt
+  #   - name: Build C extension
+  #     run: python setup.py build_ext --inplace
+  #   - name: Test without coverage
+  #     run: python -m unittest discover -vv
