Store scoring matrices inside repository

--- a/setup.cfg
+++ b/setup.cfg
@@ -60,19 +60,12 @@ pytantan.tests.data = *
 matrices = 
     BLOSUM100
     BLOSUM90
-    BLOSUM85
     BLOSUM80
-    BLOSUM75
-    BLOSUM70
-    BLOSUM65
     BLOSUM62
-    BLOSUM60
-    BLOSUM55
     BLOSUM50
     BLOSUM45
-    BLOSUM40
-    BLOSUM35
-    BLOSUM30
+    PAM120
+    PAM240
 
 [coverage:run]
 plugins = Cython.Coverage
