Add `scoring-matrices` package to the build and install dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,21 +40,22 @@ project_urls =
 
 [options]
 zip_safe = false
-packages = pytantan, pytantan.tests, pytantan.tests.data, pytantan.platform
+packages = pytantan, pytantan.tests, pytantan.platform
 include_package_data = true
 python_requires = >=3.5
 setup_requires =
     setuptools >=46.4
     cython ~=3.0
+    scoring-matrices ~=0.1
 install_requires =
     archspec ~=0.2      ; os_name != 'nt'
+    scoring-matrices ~=0.1
 tests_require =
     importlib-resources ; python_version < '3.7'
 
 [options.package_data]
 pytantan = py.typed, *.pyi, *.pxd, *.h
 pytantan.tests = requirements.txt
-pytantan.tests.data = *
 
 [build_matrices]
 matrices = 
