Use SPDX license qualifier in `PKGBUILD.in` [ci skip]

--- a/pkg/aur/PKGBUILD.in
+++ b/pkg/aur/PKGBUILD.in
@@ -7,7 +7,7 @@ pkgrel=1
 pkgdesc="Cython bindings and Python interface to Tantan, a fast method for identifying repeats in DNA and protein sequences."
 url="https://github.com/althonos/pytantan"
 arch=('i686' 'pentium4' 'x86_64' 'arm' 'armv6h' 'armv7h' 'aarch64')
-license=("GPL3")
+license=("GPL-3.0-or-later")
 depends=('python' 'python-scoring-matrices')
 makedepends=('python-setuptools' 'cython' 'python-build' 'python-installer')
 source=("https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
