Use SPDX license qualifier in `setup.cfg` [ci skip]

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ url = https://github.com/althonos/pytantan
 description = Cython bindings and Python interface to Tantan, a fast method for identifying repeats in DNA and protein sequences.
 long_description = file: README.md
 long_description_content_type = text/markdown
-license = GPLv3+
+license = GPL-3.0-or-later
 platform = any
 keywords = bioinformatics, sequence, repeats, masking
 classifier =
