--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,6 +1,6 @@
 # build dependencies
 setuptools >=46.4
-cython ~=3.0
+cython >=3.0
 scoring-matrices ~=0.2.0
 
 # sphinx documentation dependencies
@@ -12,7 +12,6 @@ ipython ~=7.19
 pygments ~=2.4
 nbsphinx ~=0.8
 sphinxcontrib-jquery ~=4.1
-
-# sphinx-bootstrap-theme ~=0.7 with patched admonition
-https://github.com/althonos/sphinx-bootstrap-theme/archive/master.zip
+sphinx-design
+pydata-sphinx-theme
 
