--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.gitignore.io/api/python,c
 # Edit at https://www.gitignore.io/?templates=python,c
 
+src/pytantan/_version.py
+
 ### C ###
 # Prerequisites
 *.d
