--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,9 +62,9 @@ jobs:
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build C extension in debug mode
-      run: python setup.py build_ext --inplace --debug
+      run: python -m pip install -v -e . --no-build-isolation
     - name: Test with coverage
-      run: python -m coverage run -m unittest discover -vv
+      run: python -m coverage run -m unittest pytantan.tests -vv
     - name: Upload to Codecov
       if: matrix.python-impl == 'CPython'
       uses: codecov/codecov-action@v3
@@ -131,9 +131,9 @@ jobs:
     - name: Install Python requirements
       run: python -m pip install -r .github/workflows/requirements.txt
     - name: Build C extension in debug mode
-      run: python setup.py build_ext --inplace --debug --plat-name macos-x86_64
+      run: python -m pip install -v -e . --no-build-isolation
     - name: Test with coverage
-      run: python -m coverage run -m unittest discover -vv
+      run: python -m coverage run -m unittest pytantan.tests -vv
     - name: Upload to Codecov
       if: matrix.python-impl == 'CPython'
       uses: codecov/codecov-action@v3
