--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    " archspec ~=0.2 ; os_name != 'nt'",
+    "archspec ~=0.2 ; os_name != 'nt'",
     "scoring-matrices ~=0.2.0",
 ]
 
@@ -73,8 +73,8 @@ cmake.define.CMAKE_CXX_COMPILER_LAUNCHER = "sccache"
 if.env.MOLD = true
 cmake.define.CMAKE_LINKER_TYPE = "mold"
 
-#[tool.coverage.run]
-#plugins = ["Cython.Coverage"]
+[tool.coverage.run]
+plugins = ["Cython.Coverage"]
 
 [tool.coverage.report]
 include = ["src/pytantan/*"]
