Add detection of additional C++ compiler flags in CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,19 @@ set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 set_property(GLOBAL PROPERTY PYTHON_EXTENSIONS_SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 
+# --- Detect C++17 flags -------------------------------------------------------
+
+include(CheckCXXCompilerFlag)
+
+check_cxx_compiler_flag(-funroll-loops HAVE_UNROLL_LOOPS)
+check_cxx_compiler_flag(-faligned-new HAVE_ALIGNED_NEW)
+if(HAVE_UNROLL_LOOPS)
+    add_compile_options(-funroll-loops)
+endif()
+if(HAVE_ALIGNED_NEW)
+    add_compile_options(-faligned-new)
+endif()
+
 # --- Detect SIMD --------------------------------------------------------------
 
 include("src/scripts/cmake/FindNEON.cmake")
