--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -259,11 +259,13 @@ jobs:
     if: "!contains(github.ref, 'rc')"
     name: Release
     needs: upload
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v3
       with:
         submodules: true
-    - uses: rasmus-saks/release-a-changelog-action@v1.0.1
+    - uses: rasmus-saks/release-a-changelog-action@v1.2.0
       with:
         github-token: '${{ secrets.GITHUB_TOKEN }}'
 
