--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -294,11 +294,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
-    - name: Download built wheels
-      uses: actions/download-artifact@v2
+    - name: Download source distribution
+      uses: actions/download-artifact@v4
       with:
-          name: wheels
-          path: dist
+        name: sdist
+        path: dist/
     - name: Extract package version
       run: echo PKGVER=${{ github.ref }} >> $GITHUB_ENV
     - name: Compute SHA256 of source distribution
