--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,15 +40,13 @@ dependencies = [
 ]
 
 [project.urls]
+"Homepage" = "https://github.com/althonos/pytantan/"
 "Documentation" = "https://pytantan.readthedocs.io/en/stable/"
 "Bug Tracker" = "https://github.com/althonos/pytantan/issues"
 "Changelog" = "https://github.com/althonos/pytantan/blob/main/CHANGELOG.md"
 "Coverage" = "https://codecov.io/gh/althonos/pytantan/"
 "Builds" = "https://github.com/althonos/pytantan/actions"
 "PyPI" = "https://pypi.org/project/pytantan"
-
-[project.optional-dependencies]
-test = ["importlib-resources ; python_version < '3.9'"]
 
 [tool.scikit-build]
 build-dir = "build/{build_type}"
@@ -72,6 +70,13 @@ cmake.define.CMAKE_CXX_COMPILER_LAUNCHER = "sccache"
 [[tool.scikit-build-overrides]]
 if.env.MOLD = true
 cmake.define.CMAKE_LINKER_TYPE = "mold"
+
+[tool.cibuildwheel]
+before-build = "pip install scikit-build-core cython scoring-matrices"
+build-frontend = { name = "pip", args = ["--no-build-isolation"] }
+build-verbosity = 1
+test-command = "python -m unittest pytantan.tests -v"
+free-threaded-support = false
 
 [tool.coverage.run]
 plugins = ["Cython.Coverage"]
