--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,6 +33,9 @@ jobs:
         - python-version: 3.12
           python-release: v3.12
           python-impl: CPython
+        - python-version: 3.13
+          python-release: v3.13
+          python-impl: CPython
         - python-version: pypy-3.7
           python-release: v3.7
           python-impl: PyPy
@@ -100,6 +103,9 @@ jobs:
           python-impl: CPython
         - python-version: '3.12'
           python-release: v3.12
+          python-impl: CPython
+        - python-version: 3.13
+          python-release: v3.13
           python-impl: CPython
         - python-version: pypy-3.7
           python-release: v3.7
@@ -172,6 +178,9 @@ jobs:
   #         python-impl: CPython
   #       - python-version: '3.12'
   #         python-release: v3.12
+  #         python-impl: CPython
+  #       - python-version: '3.13'
+  #         python-release: v3.13
   #         python-impl: CPython
   #       - python-version: pypy-3.7
   #         python-release: v3.7
