--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ license = { file = "COPYING" }
 authors = [
   { name = "Martin Larralde", email = "martin.larralde@embl.de" },
 ]
-# platform = "posix"
 keywords = ["bioinformatics", "sequence", "repeats", "masking"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -28,6 +27,7 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Programming Language :: Python :: Implementation :: CPython",
     "Programming Language :: Python :: Implementation :: PyPy",
     "Topic :: Scientific/Engineering :: Bio-Informatics",
